# EN-DE-sentiment_analysis

./: README.md  pyproject.toml
sentiment_analysis/: README.md  cleaner.py  data_visualization.py  main.py  preprocessing.py  sentiment_analysis_DE.py  sentiment_analysis_EN.py
tests/: test_cleaner.py  test_data_visualization.py  test_preprocessing.py  test_sentiment_analysis.py
